--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
 theme:
   name: material
   logo: images/logo_dam.png
-  favicon: images/logo_dam.png
+  favicon: images/logo_dam_v2.png
   font:
     text: Raleway
     code: JetBrains mono
