Refactor Firebase deploy workflow
Updated workflow name and removed unnecessary steps.

--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,27 +1,17 @@
-name: Firebase Deploy
+name: Deploy to Firebase Hosting
 
 on:
   push:
     branches:
-      - main  # Deploy when you push to main
+      - main  # Deploy when code is pushed to main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '24'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build  # adjust if your build command is different
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Deploy to Firebase
         env:
