--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -3,17 +3,22 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Deploy when code is pushed to main branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    container:
+      image: node:20-bullseye  # Node.js 20 on Debian/Ubuntu base
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Deploy to Firebase
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: npx firebase deploy --only hosting
+        run: firebase deploy --only hosting
