fix mkdocs layout

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,10 +77,11 @@ theme:
     - navigation.top            # Back to top button
     - navigation.footer         # Previous/next in footer
     - navigation.tracking       # Active link highlighting
-    - toc.integrate
     - search.suggest
     - search.highlight
     - content.code.copy
+
+#    - toc.integrate
 
 extra_css:
   - stylesheets/extra.css
